# Hangman

./: CMakeLists.txt  Hangman.vcxproj  README.md  build.bat
assets/: words.txt
include/: Drawings.hpp  Game.hpp
src/: Game.cpp  main.cpp
x64/Debug/: Hangman.exe.recipe
